--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -31,11 +31,6 @@
 	padding:0;
 }
 
-.suggestion-results{
-	float:left;
-	padding:10px;
-}
-
 .left-menu h3, h5{
 	margin-top:10px;
 	text-align:center;
@@ -101,13 +96,26 @@
 	padding-right:4px;
 } 
 
+.suggestion-results{
+	width:100%;
+}
+
+.suggestion-result-icons{
+	width:99%;
+	margin:0 auto;
+	padding-left:6px;
+	
+}
+
 .suggestion-icon{
 	float:left;
 	background:#E8E8E8;
-	margin:10px;
-	width:140px;
+	width:155px;
 	height:140px;
 	cursor:pointer;
+	margin:11px;
+	margin-top:0px;
+	margin-right:0px;
 }
 
 .suggestion-icon-body{
