--- a/recruit-gui/src/app/accounts/accounts.component.css
+++ b/recruit-gui/src/app/accounts/accounts.component.css
@@ -15,9 +15,17 @@ h3{
 	margin-left:20px;
 }
 
+.candidate-input{
+	min-width:300px;
+}
+
+.candidate-lbl{
+	width:200px;
+}
+
 .btn-action{
 	margin-right:10px;
-    min-width:100px;
+    min-width:90px;
     margin-bottom:5px;
     margin-top:5px;
 }
@@ -58,4 +66,8 @@ h3{
 
 .recruiter-trial-subscription{
 	color:blue;
+}
+
+.medicol{
+	word-break: break-word;
 }
