--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -147,15 +147,15 @@
 			<h3>Candidates</h3>
 			
 			<div style="float:left">
-				<label 	class="control-spacing candidate-lblX">Name</label>
+				<label 	class="control-spacing candidate-lbl">Name</label>
 				<input 	class="control-spacing candidate-input" type="text" formControlName="firstname"/>
 			</div>
 			<div style="float:left">
-				<label 	class="control-spacing candidate-lblX">Surname</label>
+				<label 	class="control-spacing candidate-lbl">Surname</label>
 				<input 	class="control-spacing candidate-input" type="text" formControlName="surname"/>
 			</div>
 			<div style="float:left">
-					<label 	class="control-spacing candidate-lblX">email</label>
+				<label 	class="control-spacing candidate-lbl">email</label>
 				<input 	class="control-spacing candidate-input" type="text" formControlName="email"/>
 				<button	class="control-spacing btn btn-secondary btn-action" (click)="fetchCandidates()">Filter</button>
 			</div>
