--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -1,12 +1,10 @@
 <div class=".container m-2">
 
 	<!-- Action buttons -->
-	<!--  
-	<div *ngIf="currentView === 'suggestion-results'">
+	<div *ngIf="currentView === 'suggestion-results' && isAuthenticatedAsAdmin()">
 		<button class="btn btn-secondary btnRight" (click)="showCreateAlertDialog()" download>Create Alert</button>
 	 </div>
-	-->
-    
+	
 	<div>	
 		<form [formGroup]="suggestionFilterForm" *ngIf="currentView === 'suggestion-results'">
 	
