title to filters fix for alerts

--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -1,7 +1,7 @@
 <div class=".container m-2">
 
 	<!-- Action buttons -->
-	<div *ngIf="currentView === 'suggestion-results' && isAuthenticatedAsAdmin()">
+	<div *ngIf="currentView === 'suggestion-results'">
 		<button class="btn btn-secondary btnRight" (click)="showCreateAlertDialog()" download>Create Alert</button>
 	 </div>
 	
