--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -254,8 +254,7 @@
 	<div class="feedbackBox;">
 		<form [formGroup]="createAlertForm">
 			<div class="modal-body" *ngIf="showSaveAlertBox">
-				<p>Each time a Candidate matching the current filters is uploaded you will
-				receive an alert by email</p>
+				<p class="info-text">Please add required filters before creating your alert</p>
 				Alert Name: <input type="text" formControlName="alertName">
 				<br/><br/>
 				<button class="btn btn-secondary" (click)="saveAlert()" download>Save</button>
