--- a/recruit-gui/src/app/accounts/accounts.component.css
+++ b/recruit-gui/src/app/accounts/accounts.component.css
@@ -71,3 +71,11 @@ h3{
 .medicol{
 	word-break: break-word;
 }
+
+.suggestion-flag-country{
+	height:20px;
+	width:50px;
+	padding-left:0px;
+	margin-left:0px;
+	background-position:0%;
+}
