country removed from admin flag

--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -131,7 +131,7 @@
 						<span *ngIf="candidate.country === 'BELGIUM'" class="flag-icon flag-icon-be  suggestion-flag-country"></span>
 						<span *ngIf="candidate.country === 'UK'" class="flag-icon flag-icon-gb  suggestion-flag-country"></span>
 						<span *ngIf="candidate.country === 'REPUBLIC_OF_IRELAND'" class="flag-icon flag-icon-ie  suggestion-flag-country"></span>
-						{{candidate.country}} {{candidate.city}}
+						{{candidate.city}}
 	      			</td>
 	      			<td class="medicol">
 	      				{{candidate.roleSought}}
